<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_horizontal"
    android:layout_marginTop="@dimen/margin_vertical"
    android:layout_marginRight="@dimen/margin_horizontal"
    android:layout_marginBottom="@dimen/margin_vertical"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_icon"
                android:layout_width="@dimen/size_icon"
                android:layout_height="@dimen/size_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:contentDescription="@string/pic_desc_icon" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView_color"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView_icon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_appName"
                    style="@style/AppTheme.AppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_app_name" />

                <TextView
                    android:id="@+id/textView_packageName"
                    style="@style/AppTheme.ClassName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_package_name" />

                <TextView
                    android:id="@+id/textView_className"
                    style="@style/AppTheme.ClassName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_class_name" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_color"
                android:layout_width="@dimen/size_color"
                android:layout_height="@dimen/size_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/black"
                android:contentDescription="@string/pic_desc_color" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>